Change in random number generator