@@ -1,8 +1,12 @@
 package pl.lotto.domain.numbersgenerator;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.boot.configurationprocessor.json.JSONException;
 import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import pl.lotto.domain.numbersgenerator.dto.RandomNumberDto;
 import pl.lotto.domain.numbersgenerator.dto.WinningNumbersDto;
 import pl.lotto.domain.numbersgenerator.exception.RandomNumberNotFoundException;
@@ -13,25 +17,23 @@ import java.util.stream.Stream;
 
 @AllArgsConstructor
 @Log4j2
+@Service
 public class RandomNumberGeneratorFacade {
 
     private final NumberGeneratorClient numberGeneratorClient;
     private final RandomNumberRepository randomNumberRepository;
 
-    public WinningNumbersDto generateSixRandomNumbers(){
-        ResponseEntity<RandomNumberDto> response = numberGeneratorClient.generateSixRandomNumbers();
-        if(response.getStatusCode().is2xxSuccessful()){
-            RandomNumberDto randomNumbers = response.getBody();
-            RandomNumber randomNumber = readRandomNumber(randomNumbers);
+    public WinningNumbersDto generateSixRandomNumbers() throws JsonProcessingException {
+        RandomNumberDto response = numberGeneratorClient.generateSixRandomNumbers();
+        if(response != null){
+            RandomNumber randomNumber = readRandomNumber(response);
             RandomNumber randomNumberSaved = randomNumberRepository.save(randomNumber);
-            log.info("UUID: " + randomNumberSaved.uuid() + "random numbers: " +randomNumberSaved.randomNumbers());
             return WinningNumbersDto.builder()
                     .winningNumbers(randomNumberSaved.randomNumbers())
                     .build();
         }
-        log.info("Status code: " + response.getStatusCode());
         return WinningNumbersDto.builder()
-                .winningNumbers(Collections.emptySet())
+                .winningNumbers(Set.of())
                 .build();
     }
 
